# AndroidLameDemo

./: .gitignore  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
lame/: build.gradle
lame/lame-3.100/: Makefile  build-lame.sh  config.h  config.status  libtool
lame/lame-3.100/ACM/: Makefile
lame/lame-3.100/ACM/ADbg/: Makefile
lame/lame-3.100/ACM/ddk/: Makefile
lame/lame-3.100/ACM/tinyxml/: Makefile
lame/lame-3.100/Dll/: Makefile
lame/lame-3.100/dshow/: Makefile
lame/lame-3.100/frontend/: Makefile
lame/lame-3.100/include/: Makefile
lame/lame-3.100/libmp3lame/: Makefile  libmp3lame.la
lame/lame-3.100/libmp3lame/.deps/: VbrTag.Plo  bitstream.Plo  encoder.Plo  fft.Plo  gain_analysis.Plo  id3tag.Plo  lame.Plo  mpglib_interface.Plo  newmdct.Plo  presets.Plo  psymodel.Plo  quantize.Plo  quantize_pvt.Plo  reservoir.Plo  set_get.Plo  tables.Plo  takehiro.Plo  util.Plo  vbrquantize.Plo  version.Plo
lame/lame-3.100/libmp3lame/.libs/: libmp3lame.lai
lame/lame-3.100/libmp3lame/i386/: Makefile
lame/lame-3.100/libmp3lame/vector/: Makefile
lame/lame-3.100/mac/: Makefile
lame/lame-3.100/macosx/: Makefile
lame/lame-3.100/macosx/English.lproj/: Makefile
lame/lame-3.100/macosx/LAME.xcodeproj/: Makefile
lame/lame-3.100/misc/: Makefile
lame/lame-3.100/mpglib/: Makefile
lame/lame-3.100/mpglib/.deps/: common.Plo  dct64_i386.Plo  decode_i386.Plo  interface.Plo  layer1.Plo  layer2.Plo  layer3.Plo  tabinit.Plo
lame/lame-3.100/vc_solution/: Makefile
lame/src/main/: AndroidManifest.xml
lame/src/main/cpp/: CMakeLists.txt  native-lib.cpp
(+17 files in other folders)
